Spacing fix

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,3 @@
-main h2, main p, main pre {
-    margin-bottom: 25px !important;
-}
-
 html, body {
     height: 100%;
 }
